--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </center>
     <footer class="page-footer">
           <div class="container">
-          © 2021 
+          Hacktober Fest © 2021 
           <a class="grey-text text-lighten-4 right" href="https://www.fcoterroba.com" target="_blank">fcoterroba</a>
           </div>
     </footer>
